fixed notebook navigation overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -77,3 +77,14 @@ strong {
 .ProseMirror:focus {
   outline: none;
 }
+
+.text-container ul > li {
+  margin-bottom: 15px;
+  display: flex;
+  position: relative;
+}
+
+.text-container ul > li::marker {
+  content: url('../common/assets/svg/bullet-arrow.svg');
+  color: white;
+}
